# bit-collection-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: bench.rs
derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs
templates/: castle_rights.rs  imports.rs
tests/: derive.rs  macros.rs  quantity.rs
