[package]
name = "bit_collection_derive"
version = "0.1.0"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
repository = "https://github.com/nvzqz/bit-collection-rs"
description = "Derive functionality for the `BitCollection` trait."

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"
